--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 <br>
 <br>
 <center>
-<button class="btn"><a class="btn" href="https://bit.ly/2xB5Q5Q" rel="nofollow" target="_blank">Get Earning Now</a></center>
+<button class="btn"><a class="btn" href="https://bit.ly/2WStyTT" rel="nofollow" target="_blank">Get Earning Now</a></center>
 </center>
 <br>
 <center>
